tests/diagnostics/comments/doc_comments/orphan_doc_comment/expect.txt
# exit: 1
input/main.lang0:1:1: error: doc comment must document a declaration
  /// Orphan docs.
  ^
